[package]
name = "cyclonedds-rs"
version = "0.3.0"
authors = ["Sojan James <Sojan.James@gmail.com>"]
edition = "2018"
description = "Safe Rust bindings for cyclonedds"
license-file = "LICENSE"
homepage = "https://github.com/sjames/cyclonedds-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyclonedds-sys = "0.1.2"
cdr = "0.2.4"
serde = "1.0.126"
serde_derive = "1.0.126"
murmur3 = "0.5.1"
dds_derive = {path = "dds_derive"}
thiserror = "1.0.26"

[features]
# Shared memory support (for future use. Not implemented yet)
shm = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }




