[package]
name = "helloworld_data"
version = "0.1.0"
authors = ["Sojan James <sojan.james@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyclonedds-sys = { git = "ssh://git@github.com/sjames/cyclonedds-sys"}

[build-dependencies]
cycloneddscodegen = { git = "ssh://git@github.com/sjames/cycloneddscodegen", features=["rust_codegen"]}

